<resources>
    <string name="app_name">TrainingCourse_Application</string>
    <string name="title_activity_student_home">StudentHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_studied_courses">Studied Courses</string>
    <string name="menu_courses_history">Courses History</string>
    <string name="menu_edit_profile">Edit Profile</string>

    <string name="title_activity_admin_home">AdminHome</string>
    <string name="menu_create_course">Create Course</string>
    <string name="menu_edit_delete_course">Edit/Delete Course</string>
    <string name="menu_create_section">Create Section</string>
    <string name="menu_accept_reject_applicants">Accept/Reject Applicants</string>
    <string name="menu_view_profiles">View Profiles</string>
    <string name="menu_history_course">History of a course</string>

    <string name="title_activity_instructor_home">InstructorHome</string>
    <string name="menu_previous_taught_courses">Previous taught Courses</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_list_students_course">List of students in a course</string>
    <string name="menu_edit_profile_instructor">Edit Profile</string>

</resources>