<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/createCourse"
            android:icon="@drawable/baseline_create_24"
            android:title="@string/menu_create_course" />

        <item
            android:id="@+id/editDeleteCourse"
            android:icon="@drawable/baseline_delete_24"
            android:title="@string/menu_edit_delete_course" />

        <item
            android:id="@+id/createSection"
            android:icon="@drawable/baseline_add_24"
            android:title="@string/menu_create_section" />

        <item
            android:id="@+id/acceptRejectApplicants"
            android:icon="@drawable/baseline_assignment_turned_in_24"
            android:title="@string/menu_accept_reject_applicants" />

        <item
            android:id="@+id/viewProfiles"
            android:icon="@drawable/baseline_preview_24"
            android:title="@string/menu_view_profiles" />

        <item
            android:id="@+id/historyCourse"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/menu_history_course" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>