<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/courses"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/studiedCourses"
            android:icon="@drawable/baseline_done_24"
            android:title="@string/menu_studied_courses" />
        <item
            android:id="@+id/coursesHistory"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/menu_courses_history" />
        <item
            android:id="@+id/editProfile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_edit_profile" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>