<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.trainingcourse_application.shared.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/createCourse"
        android:name="com.example.trainingcourse_application.admin.createcourse.CreateCourseFragment"
        android:label="@string/menu_create_course"
        tools:layout="@layout/fragment_createcourse" />

    <fragment
        android:id="@+id/editDeleteCourse"
        android:name="com.example.trainingcourse_application.admin.editdeletecourse.EditDeleteCourseFragment"
        android:label="@string/menu_edit_delete_course"
        tools:layout="@layout/fragment_editdeletecourse" />

    <fragment
        android:id="@+id/createSection"
        android:name="com.example.trainingcourse_application.admin.createsection.CreateSectionFragment"
        android:label="@string/menu_create_section"
        tools:layout="@layout/fragment_createsection" />

    <fragment
        android:id="@+id/acceptRejectApplicants"
        android:name="com.example.trainingcourse_application.admin.accecptrejectapplicants.AcceptRejectApplicantsFragment"
        android:label="@string/menu_accept_reject_applicants"
        tools:layout="@layout/fragment_acceptrejectapplicants" />

    <fragment
        android:id="@+id/viewProfiles"
        android:name="com.example.trainingcourse_application.admin.viewprofiles.ViewProfilesFragment"
        android:label="@string/menu_view_profiles"
        tools:layout="@layout/fragment_viewprofiles" />

    <fragment
        android:id="@+id/historyCourse"
        android:name="com.example.trainingcourse_application.admin.historyofcourse.HistoryOfCourseFragment"
        android:label="@string/menu_history_course"
        tools:layout="@layout/fragment_historycourse" />

    <fragment
        android:id="@+id/logout"
        android:name="com.example.trainingcourse_application.shared.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>