<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.trainingcourse_application.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/notifications"
        android:name="com.example.trainingcourse_application.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/courses"
        android:name="com.example.trainingcourse_application.ui.courses.CoursesFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/studiedCourses"
        android:name="com.example.trainingcourse_application.ui.studiedcourses.StudiedcoursesFragment"
        android:label="@string/menu_studied_courses"
        tools:layout="@layout/fragment_studiedcourses" />

    <fragment
        android:id="@+id/coursesHistory"
        android:name="com.example.trainingcourse_application.ui.courseshistory.CourseshistoryFragment"
        android:label="@string/menu_courses_history"
        tools:layout="@layout/fragment_courseshistory" />

    <fragment
        android:id="@+id/editProfile"
        android:name="com.example.trainingcourse_application.ui.editprofile.EditprofileFragment"
        android:label="@string/menu_edit_profile"
        tools:layout="@layout/fragment_editprofile" />

    <fragment
        android:id="@+id/logout"
        android:name="com.example.trainingcourse_application.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>